# web-audio-api-rs

./: .codespellignore  .gitignore  .pre-commit-config.yaml  .prettierrc.yaml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  crush.js  idl.txt  noise.js  repl.js  test.js  test.rs
.github/: dependabot.yaml
.github/workflows/: benchmark-post-result.yaml  benchmark.yaml  build.yaml  ci.yaml  msrv.yaml  post-pr-result.yaml  post-pr-result.yml  pre-commit.yaml  python.yaml  rust.yaml  rust.yml
benches/: my_benchmark.rs  worklet.rs
examples/: amplitude_modulation.rs  analyser.rs  audio_buffer.rs  audio_buffer_source_events.rs  audio_buffer_source_pitching.rs  audio_processor_trait.rs  bench.rs  benchmarks.rs  biquad.rs  change_state.rs  compressor.rs  constant_source.rs  convolution.rs  cyclic_graph.rs  decode_multithreaded.rs  decoding.rs  delay.rs  doppler.rs  event_emitter.rs  feedback_delay.rs  feedback_delays.rs  granular-original.rs  granular.rs  iir.rs  latency_attributes.rs  many_oscillators.rs  many_oscillators_with_env.rs  media_element.rs  merger.rs  mic_playback.rs  microphone.rs  mono.rs  multichannel.maxpat  multichannel.rs  node.rs  oscillators.rs  panner_cone.rs  recorder.rs  resampling.rs  roundtrip_latency_test.rs  (+17 more)
flamegraphs/: Cargo.toml
python/: .gitignore  Cargo.toml  README.md  main.py  pyproject.toml
python/.github/workflows/: CI.yml
python/src/: lib.rs
samples/: README.md  sample-aac.m4a  sample-alac.m4a  sample.aiff  sample.flac  sample.webm
showcase/: README.md
showcase/latency_tester/: Cargo.toml
showcase/latency_tester/src/: latency_tester.rs  main.rs
showcase/mic_playback/: Cargo.toml
showcase/mic_playback/src/: main.rs
snapshots/: default_periodic.json  periodic_2f.json  sawtooth.json  sine.json  square.json  triangle.json  white_hp.json
src/: alloc.rs  analysis.rs  audio_buffer.rs  buffer.rs  buffer2.rs  capacity.rs  codecs.rs  context.rs  control.rs  decoding.rs  events.rs  graph.rs  io.rs  js_runtime.rs  lib.rs  media.rs  media_element.rs  message.rs  message_port.rs  microphone.rs  node.rs  param.rs  periodic_wave.rs  playback_stats.rs  playout_stats.rs  process.rs  resampling.rs  ring_buffer.rs  sample.rs  snapshot.rs  spatial.rs  stats.rs  types.rs  worklet.rs
src/context/: base.rs  concrete_base.rs  diagnostics.rs  mod.rs  offline.rs  online.rs
src/io/: backend_cpal.rs  backend_cubeb.rs  cpal.rs  cubeb.rs  echo_cancellation.rs  echo_reference.rs  microphone.rs  mod.rs  none.rs
src/media/: decoding.rs  element.rs  media_element.rs  mic.rs  mod.rs  resampling.rs  stream.rs
src/media_devices/: mod.rs
src/media_recorder/: mod.rs
src/media_streams/: mod.rs
src/node/: analyser.rs  analyzer.rs  audio_buffer.rs  audio_buffer_source.rs  audio_node.rs  biquad.rs  biquad_filter.rs  channel_merger.rs  channel_splitter.rs  constant.rs  constant_source.rs  constant_src.rs  convolver.rs  delay.rs  destination.rs  dynamics_compressor.rs  gain.rs  iir_filter.rs  js_worklet.rs  media_element.rs  media_element_source.rs  media_stream.rs  media_stream_destination.rs  media_stream_source.rs  media_stream_track_source.rs  merger.rs  mod.rs  oscillator.rs  panner.rs  scheduled_source.rs  script_processor.rs  splitter.rs  stereo_panner.rs  stream_src.rs  waveshaper.rs  worklet.rs
src/render/: garbage_collector.rs  graph.rs  mod.rs  node_collection.rs  processor.rs  quantum.rs  render_quantum.rs  thread.rs
src/render/graph/: test.rs
src/renderer/: mod.rs  processor.rs  render_quantum.rs
tests/: denormals.rs  graph.rs  media.rs  media_element.rs  mixing.rs  offline.rs  online.rs  processor_error.rs  stall_render.rs
