[package]
name = "web-audio-api"
version = "0.20.0"
authors = ["Otto <otto@ot-to.nl>"]
edition = "2018"
description = "A pure Rust implementation of the Web Audio API, for use in non-browser contexts"
readme = "README.md"
repository = "https://github.com/orottier/web-audio-api-rs"
keywords = ["web-audio-api", "audio", "sound", "dsp"]
license = "MIT"
categories = ["multimedia::audio"]
exclude = ["/samples", "/snapshots"]

[dependencies]
cpal = "0.13"
vecmath = "1.0"
arrayvec = "0.7"
log = "0.4"
realfft = "3.0"
crossbeam-channel = "0.5"
num-complex = "0.4"
lazy_static = "1.4"
rubato = "0.10"
float_eq = "0.7"
smallvec = "1.8"
once_cell = "1.10"
symphonia = { version = "0.5", default-features = false }
creek = "0.2.1"
futures-channel = "0.3.21"
async-trait = "0.1.56"

[dev-dependencies]
rand = "0.8"
alloc_counter = "0.0.4"
env_logger = "0.9"
futures = "0.3.21"

# used in examples/mic_playback.rs:
simplelog = "0.11"
termion = "1.5"
textplots = "0.8"

# Uncomment the following lines to enable debug symbols
# during CPU profiling
# [profile.release]
# debug = true

[features]
default = ["mp3", "ogg", "flac", "wav"]
mp3 = ["symphonia/mp3", "creek/decode-mp3"]
ogg = ["symphonia/ogg", "symphonia/vorbis", "creek/decode-ogg", "creek/decode-vorbis"]
flac = ["symphonia/flac", "creek/decode-flac"]
wav = ["symphonia/wav", "symphonia/pcm", "creek/decode-wav", "creek/decode-pcm"]
