[package]
name = "web-audio-api"
version = "0.29.0"
authors = ["Otto <otto@ot-to.nl>"]
edition = "2018"
description = "A pure Rust implementation of the Web Audio API, for use in non-browser contexts"
readme = "README.md"
repository = "https://github.com/orottier/web-audio-api-rs"
keywords = ["web-audio-api", "audio", "sound", "dsp"]
license = "MIT"
categories = ["multimedia::audio"]
exclude = ["/samples", "/showcase", "/.github"]

[dependencies]
arc-swap = "1.6.0"
arrayvec = "0.7"
cpal = { version = "0.15.0", optional = true }
creek = "0.2.1"
crossbeam-channel = "0.5"
cubeb = { version = "0.10.0", optional = true }
dasp_sample = "0.11.0"
float_eq = "1.0"
hound = "3.5.0"
hrtf = "0.8.0"
lazy_static = "1.4"
log = "0.4"
num-complex = "0.4"
once_cell = "1.10"
realfft = "3.0"
rubato = "0.13"
rustc-hash = "1.1.0"
smallvec = "1.8"
symphonia = { version = "0.5", default-features = false }
vecmath = "1.0"

[dev-dependencies]
alloc_counter = "0.0.4"
env_logger = "0.10"
iai = "0.1.1"
rand = "0.8"


# Uncomment the following lines to enable debug symbols
# during CPU profiling
# [profile.release]
# debug = true

[[bench]]
name = "my_benchmark"
harness = false

[features]
default = ["mp3", "ogg", "flac", "wav", "cpal"]
mp3 = ["symphonia/mp3", "creek/decode-mp3"]
ogg = ["symphonia/ogg", "symphonia/vorbis", "creek/decode-ogg", "creek/decode-vorbis"]
flac = ["symphonia/flac", "creek/decode-flac"]
wav = ["symphonia/wav", "symphonia/pcm", "creek/decode-wav", "creek/decode-pcm"]
cpal = ["dep:cpal"]
cubeb = ["dep:cubeb"]
cpal-jack = ["cpal", "cpal/jack"]
cpal-asio = ["cpal", "cpal/asio"]
