[package]
name = "mic_playback"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam-channel = "0.5"
log = "0.4"
simplelog = "0.12"
termion = "2.0"
textplots = "0.8"
web-audio-api = { path = "../../" }
